@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041110
+releasedate		20041111
 
 ##############################################################################
 # host dependent configuration
