@@ -19,8 +19,8 @@ sub execute {
 
    my ($childpid, $stdout, $stderr);
    my $mypid=$$;
-   local $SIG{CHLD}; undef $SIG{CHLD};	# disable outside $SIG{CHLD} handler temporarily for wait()
-   local $|=1;			# flush CGI related output in parent
+   local $SIG{CHLD}; undef $SIG{CHLD};	# disable $SIG{CHLD} temporarily for wait()
+   local $|=1;				# flush CGI related output in parent
 
    eval { $childpid = open3(\*cmdIN, \*cmdOUT, \*cmdERR, @cmd); };
    if ($@) {			# open3 return err only in child
