@@ -65,9 +65,6 @@ use vars qw(@slottime);
 
 ########## MAIN ##################################################
 openwebmail_requestbegin();
-$SIG{PIPE}=\&openwebmail_exit;	# for user stop
-$SIG{TERM}=\&openwebmail_exit;	# for user stop
-
 userenv_init();
 
 if (!$config{'enable_calendar'}) {
