@@ -63,9 +63,6 @@ use vars qw($webdiskrootdir);
 
 ########## MAIN ##################################################
 openwebmail_requestbegin();
-$SIG{PIPE}=\&openwebmail_exit;	# for user stop
-$SIG{TERM}=\&openwebmail_exit;	# for user stop
-
 userenv_init();
 
 if (!$config{'enable_webdisk'}) {
