@@ -15,6 +15,9 @@ sub load {
 }
 
 sub get_usage_limit {
+   # disable $SIG{CHLD} temporarily in case module routine calls system()/wait()
+   local $SIG{CHLD}; undef $SIG{CHLD};	
+
    my ($origruid, $origeuid, $origegid)=ow::suid::set_uid_to_root();
    my @results=ow::quota::internal::get_usage_limit(@_);
    ow::suid::restore_uid_from_root($origruid, $origeuid, $origegid);
